--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-source-contentful": "^2.3.15",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
     "gsap": "^3.3.1",
